@@ -74,6 +74,7 @@
     <File name="MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Gui/XmlSchemasPanel.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.XmlEditor/ClosingBracketCompletionDataProvider.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -93,7 +94,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </References>
-  <GtkDesignInfo gtkVersion="2.8.3">
+  <GtkDesignInfo isWidgetLibrary="True" gtkVersion="2.8.3">
     <ExportedWidgets>
       <Widget>MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget</Widget>
       <Widget>MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget</Widget>
